# v4l2ucp-qt6

./: CMakeLists.txt
src/: CMakeLists.txt  mainWindow.cpp  mainWindow.h  previewSettings.cpp  previewSettings.h  v4l2controls.cpp  v4l2controls.h  v4l2ctrl.c  v4l2ucp.cpp
